10 April 2014: Wouter
	- iana portlist updated.
	- Patch from Hannes Frederic Sowa for Linux 3.15 fragmentation
	  option for DNS fragmentation defense.

8 April 2014: Wouter
	- Fix #574: make test fails on Ubuntu 14.04.  Disabled remote-control
	  in testbound scripts.
	- iana portlist updated.

7 April 2014: Wouter
	- C.ROOT-SERVERS.NET has an IPv6 address, and we updated the root
	  hints (patch from Anand Buddhdev).
	- Fix #572: Fix unit test failure for systems with different
	  /etc/services.

28 March 2014: Wouter
	- Fix #569: do_tcp is do-tcp in unbound.conf man page.

25 March 2014: Wouter
	- Patch from Stuart Henderson to build unbound-host man from .1.in.

24 March 2014: Wouter
	- Fix print filename of encompassing config file on read failure.

12 March 2014: Wouter
	- tag 1.4.22
	- trunk has 1.4.23 in development.

10 March 2014: Wouter
	- Fix bug#561: contrib/cacti plugin did not report SERVFAIL rcodes
	  because of spelling.  Patch from Chris Coates.

27 February 2014: Wouter
	- tag 1.4.22rc1

21 February 2014: Wouter
	- iana portlist updated.

20 February 2014: Matthijs
	- Be lenient when a NSEC NameError response with RCODE=NXDOMAIN is
	  received. This is okay according 4035, but not after revising
	  existence in 4592.  NSEC empty non-terminals exist and thus the
	  RCODE should have been NOERROR. If this occurs, and the RRsets
	  are secure, we set the RCODE to NOERROR and the security status
	  of the reponse is also considered secure.

14 February 2014: Wouter
	- Works on Minix (3.2.1).

11 February 2014: Wouter
	- Fix parse of #553(NSD) string in sldns, quotes without spaces.

7 February 2014: Wouter
	- iana portlist updated.
	- add body to ifstatement if locks disabled.
	- add TXT string"string" test case to unit test.
	- Fix #551: License change "Regents" to "Copyright holder", matching
	  the BSD license on opensource.org.

6 February 2014: Wouter
	- sldns has type HIP.
	- code documentation on the module interface.

5 February 2014: Wouter