@@ -238,6 +238,7 @@ if test "$1" = "config" ; then
 		p_config "total.num.cachehits" "cache hits"
 		p_config "total.num.prefetch" "cache prefetch"
 		p_config "num.query.tcp" "TCP queries"
+		p_config "num.query.tcpout" "TCP out queries"
 		p_config "num.query.ipv6" "IPv6 queries"
 		p_config "unwanted.queries" "queries that failed acl"
 		p_config "unwanted.replies" "unwanted or unsolicited replies"
@@ -425,7 +426,8 @@ hits)
 	for x in `grep "^thread[0-9][0-9]*\.num\.queries=" $state |
 		sed -e 's/=.*//'` total.num.queries \
 		total.num.cachehits total.num.prefetch num.query.tcp \
-		num.query.ipv6 unwanted.queries unwanted.replies; do
+		num.query.tcpout num.query.ipv6 unwanted.queries \
+		unwanted.replies; do
 		if grep "^"$x"=" $state >/dev/null 2>&1; then
 			print_qps $x
 		fi
