@@ -147,6 +147,8 @@ such as a higher verbosity level.
 Show what is worked on.  Prints all queries that the server is currently
 working on.  Prints the time that users have been waiting.  For internal
 requests, no time is printed.  And then prints out the module status.
+This prints the queries from the first thread, and not queries that are
+being serviced from other threads.
 .TP
 .B flush_infra \fIall|IP
 If all then entire infra cache is emptied.  If a specific IP address, the
@@ -400,6 +402,10 @@ Also printed for other opcodes, UPDATE, ...
 .TP
 .I num.query.tcp
 Number of queries that were made using TCP towards the unbound server.
+.TP
+.I num.query.tcpout
+Number of queries that the unbound server made using TCP outgoing towards
+other servers.
 .TP
 .I num.query.ipv6
 Number of queries that were made using IPv6 towards the unbound server.
