@@ -2,6 +2,9 @@
 	- iana portlist updated.
 	- Patch from Hannes Frederic Sowa for Linux 3.15 fragmentation
 	  option for DNS fragmentation defense.
+	- Document that dump_requestlist only prints queries from thread 0.
+	- unbound-control stats prints num.query.tcpout with number of TCP
+	  outgoing queries made in the previous statistics interval.
 
 8 April 2014: Wouter
 	- Fix #574: make test fails on Ubuntu 14.04.  Disabled remote-control
